--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,13 @@ plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.20' apply false
+    id "org.jlleitschuh.gradle.ktlint" version "10.2.1" apply true
+    id "io.gitlab.arturbosch.detekt" version "1.19.0" apply true
+}
+
+allprojects {
+    apply plugin: "org.jlleitschuh.gradle.ktlint"
+    apply plugin: 'io.gitlab.arturbosch.detekt'
 }
 
 task clean(type: Delete) {
